--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "contactapi",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -14,5 +13,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.4",
     "nodemon": "^3.0.1"
-  }
+  },
+  "description": ""
 }
