--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "excel4node": "^1.8.2",
     "express": "^4.18.2",
-    "mongoose": "^7.4.4",
-    "nodemon": "^3.0.1"
+    "json2csv": "^6.0.0-alpha.2",
+    "mongoose": "^7.4.5",
+    "nodemon": "^3.0.1",
+    "pdfkit": "^0.13.0"
   },
   "description": ""
 }
