--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "json2csv": "^6.0.0-alpha.2",
     "mongoose": "^7.4.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pdfkit": "^0.13.0"
   },
