--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "excel4node": "^1.8.2",
     "express": "^4.18.2",
     "json2csv": "^6.0.0-alpha.2",
